@@ -1,3 +1,9 @@
+** v4.44, 08.02.2020**
+* Add '/muierrors on' and '/muierrors off' commands to quickly disable/enable only ElvUI + my AddOn.
+* Try to fix a talent skin error.
+* Some Options color update.
+
+
 ** v4.43, 05.02.2020**
 * Take account to the new ElvUI Options update.
 * Added a chat alert for placed items.
